3/6/14 #25 prevent intermediate pH value changes when changing the volume of water and solute simultaneously, so that 'ratio' doesn't update while draining
3/6/14 #26 new colors for 'blood' and 'hand soap', so that H3O+ molecules are visible with 'ratio' feature
3/6/14 move pH probe from 'center' to 'right' position for 'Custom' screen, move meter slightly to left so probe doesn't hit molecule counts
3/6/14 move pH probe behind ratio and molecule counts, so that it doesn't obscure these and looks more like probe is in solution
3/6/14 #37 fix Reset All for graph in 'Custom' screen, use PropertySet for all properties internal to GraphNode
3/6/14 #35 fix Reset All for pH meters, add expandedProperty to viewProperties for both graph and pH meter
# 1.0.0-dev.19 3/5/14
3/5/14 fix potential ordering dependency in how value is positioned in graph indicator
3/5/14 restore 'ratio' feature in production version
3/5/14 #25 ratio performance enhancements: use Float32Array if available, pre-allocate max array size, replace Util.toFixedNumber with Math.round
3/5/14 #25 ratio: store molecule locations so that they don't move when solution volume changes and pH remains constant
3/5/14 #24 ratio: added workaround for clipping issue, general problem is scenery#200
3/5/14 exclude 'ratio' feature from production version until we work out issues
# 1.0.0-dev.18 3/5/14
3/5/14 pH meter: replace picker with up/down arrow buttons
3/4/14 port strings from Java
3/4/14 pH Meter: increase height of touch area for pH picker, increase space between pH picker and expand/collapse button
# 1.0.0-dev.17 3/4/14
3/4/14 ratio: increase to 3000 molecules, 1000 wasn't showing obvious differences for pH values in the 'linear' range
3/4/14 #23 stylistic, remove curly braces around layout code in MoleculeCountNode
3/4/14 #10 change ScientificNotationNode to use Property instead of setValue
3/3/14 #16 add note about indicator code to JSdoc
3/4/14 #22 stylistic, add blank lines before some comments